data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1578.wast
;; 9. **Test Name: Condition Mis-evaluation**    **Description:** Design a test where the condition on the stack is misinterpreted by `br_if`, due to misplaced stack management or condition checks.    **Infinite Loop Relation:** Incorrect condition checks cause incorrect loop exits, resulting in infinite loops if the branch condition is improperly evaluated.

(assert_invalid
  (module (func $condition-mis-evaluation
    (block
      (block (loop (br_if 1 (i32.const 0)))))
  ))
  "incorrect condition checks"
)